// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CopyButton renders correctly 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="copyButton"
>
  <View>
    {"name":"ios-copy","size":26,"color":"#000"}
  </View>
</View>
`;

exports[`CopyButton renders correctly when negative 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="copyButton"
>
  <View>
    {"name":"ios-copy","size":26,"color":"#fff"}
  </View>
</View>
`;
